@@ -2,7 +2,7 @@
 # refractiveindex.info database is in the public domain
 # copyright and related rights waived via CC0 1.0
 
-REFERENCES: "R. E. Treharne, RF Mgnetron Sputtering of Transparent Conducting Oxides and CdTe/CdS Solar Cells, <a href=\"http://iopscience.iop.org/article/10.1088/1742-6596/286/1/012038/meta\"></a><i>PhD Thesis, University of Durham</i> (2011)</a>"
+REFERENCES: "R. E. Treharne, RF mgnetron sputtering of transparent conducting oxides and CdTe/CdS solar cells, <a href=\"http://etheses.dur.ac.uk/3310\"><i>PhD Thesis, University of Durham</i> (2011)</a> (Numerical data kindly provided Dr. Robert Treharne)"
 COMMENTS: "Variable-angle ellipsometer was used to take amplitude and phase change measurements. The refractive index and extinction coefficient was extracted for NSG Opti-White (low-Fe) glass from a multi-oscillator model fit to the ellipsometry data, as a function of wavelength, from 300 to 1500 nm"
 DATA:
   - type: tabulated nk
